<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.7">
  <POU Name="MAIN" Id="{4193d1f4-5b8a-4d46-8bb1-f5443e3607b6}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	txHmi : ST_TxHmi;	

	em8000 : FB_StewartInterface('192.168.90.30', 50030, 50040, ADR(txHmi.em8000));
	em1500 : FB_StewartInterface('192.168.90.31', 50031, 50041, ADR(txHmi.em1500));
	
	comau : FB_ComauInterface('192.168.90.32', 50032, 50042, ADR(txHmi.comau));
	
	mru1 : FB_MruInterface(50043);
	mru2 : FB_MruInterface(50044);
	
	at960 : FB_LeicaInterface;
	
	
	timeStamp100ns : ULINT; // System time in 100 ns resolution
	
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[

em8000();
em1500();
comau();
mru1();
mru2();
at960();

timeStamp100ns := F_GetTaskTime();

// Update Hmi data





]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="109" Count="0" />
      <LineId Id="127" Count="0" />
      <LineId Id="110" Count="0" />
      <LineId Id="120" Count="0" />
      <LineId Id="145" Count="0" />
      <LineId Id="141" Count="1" />
      <LineId Id="214" Count="0" />
      <LineId Id="239" Count="0" />
      <LineId Id="238" Count="0" />
      <LineId Id="263" Count="0" />
      <LineId Id="262" Count="0" />
      <LineId Id="269" Count="0" />
      <LineId Id="168" Count="0" />
      <LineId Id="129" Count="0" />
      <LineId Id="128" Count="0" />
      <LineId Id="121" Count="0" />
      <LineId Id="17" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>